--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=examify-server
+spring.datasource.url=jdbc:mysql://localhost:3306/exam?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=Rawat@9756037495
+
+#jpa configuration
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+#spring.application.name=authentication-service
+spring.jpa.open-in-view=false
