--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=examify-server
-spring.datasource.url=jdbc:mysql://localhost:3306/exam?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/examifydb?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=Rawat@9756037495
 
