--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,4 +1,4 @@
-name: Java CI
+name: Java CI/CD
 
 on:
   push:
@@ -21,11 +21,27 @@ jobs:
           cache: maven
 
       - name: Build with Maven
-        run: mvn -B package --file pom.xml
+        run: mvn clean install -DskipTests
 
-      - name: Run tests
-        run: mvn test
+      - name: Login to Docker Hub
+        run: docker login -u ${{secrets.DOCKER_USERNAME}} -p ${{secrets.DOCKER_PASSWORD}}
 
-      - name: Deploy
-        run: |
-          # Add your deployment commands here
+      - name: Build Docker image
+        run: docker build -t integrationninjas/springboot-example .
+
+      - name: Publish image to Docker Hub
+        run: docker push integrationninjas/springboot-example:latest
+
+  deploy:
+    needs: build
+    runs-on: [self-hosted]
+
+    steps:
+      - name: Pull Image from Docker Hub
+        run: docker pull integrationninjas/springboot-example:latest
+
+      - name: Delete old container if exists
+        run: docker rm -f springboot-example-container || true
+
+      - name: Run Docker container
+        run: docker run -d -p 8080:8080 --name springboot-example-container integrationninjas/springboot-example
