--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -22,8 +22,7 @@ jobs:
 
       - name: Install Maven
         run: |
-          sudo apt-get update
-          sudo apt-get install maven -y
+          sudo yum install maven -y
 
       - name: Build with Maven
         run: mvn clean install -DskipTests
