--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=examify-server
-spring.datasource.url=jdbc:mysql://localhost:3306/examifydb?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/examifydb?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=root
 
@@ -8,5 +8,3 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-#spring.application.name=authentication-service
-spring.jpa.open-in-view=false
