--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=examify-server
 spring.datasource.url=jdbc:mysql://mysqlcontainer:3306/examifydb?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.username=sanjay
+spring.datasource.password=sanjay123
 
 #jpa configuration
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
